tests/typing/bad/testfile-call-1.c
int f(int x) {}
int main() { f(); }

